cmake_minimum_required(VERSION 3.9)
project(PA6)

set(CMAKE_CXX_STANDARD 11)

add_executable(PA6
        App.cpp
        App.hpp
        Date.cpp
        Date.hpp
        List.cpp
        List.hpp
        ListNode.cpp
        ListNode.hpp
        main.cpp
        Menu.cpp
        Menu.hpp
        Stack.cpp
        Stack.hpp)
